--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,11 @@ doctype html
 html
   head
     title 100000ch
-    link(rel='stylesheet', href='/css/main.css')
+    meta(charset='utf-8')
+    link(rel='stylesheet', href='/css/lib.min.css')
+    link(rel='stylesheet', href='/css/app.min.css')
   body
-    p
-      !=name
+    input(type='text', value='http://1000ch.net')
+    button Button
+    script(src='/js/lib.min.js')
+    script(src='/js/app.min.js')
