--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,22 @@ html
     link(rel='stylesheet', href='/css/lib.min.css')
     link(rel='stylesheet', href='/css/app.min.css')
   body
-    input(type='text', value='http://1000ch.net')
-    button Button
+
+    .control
+      header(role="banner")
+        h1.appname CSSR
+        p.tagline
+          Find unused and duplicate CSS    
+      nav
+        input(type="text", value='http://1000ch.net').input
+        button.btn Parse
+
+    footer(role="contentinfo")
+      p.
+        Powered by <a href="https://github.com/operasoftware/ucss">UCSS</a>. CSSR is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, <a href="https://twitter.com/hiloki">hiloki</a>.
+
+    main.result.
+      here
+
     script(src='/js/lib.min.js')
     script(src='/js/app.min.js')
