--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -1,35 +1,29 @@
 html
-  min-height: 100vh
+  min-height: 100%
   background: url(/img/ussr.png) no-repeat center
   -webkit-background-size: cover
   background-size: cover
 
-
-body
-
-
-body:after
-  display: block
-  content: ""
-  position: absolute
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  background-color: rgba(229, 102, 70, 0.8)
-
-
 a
   color: #FFF
 
+p,ul,li
+  margin: 0
+  padding: 0
 
-.control
-  position: absolute
-  left: 24px
-  top: 24px
-  z-index: 1
-  width: 50%
+code
+  font-family: Monaco, Consolas, monospace, monospace
 
+.control 
+  background-color: rgba(229, 102, 70, 0.8)
+@media(min-width: 864px)
+  .control
+    position: absolute
+    left: 0
+    top: 0
+    bottom: 0
+    z-index: 1
+    width: 40%
 
 .appname
   margin: 0
@@ -40,15 +34,15 @@ a
 
 
 .input
+  box-sizing: border-box
   -webkit-appearance: none
   border: 0
   border-bottom: 1px solid #FFF
-  width: 80%
-  padding: 0.5rem
+  width: 100%
+  padding: 0.5rem 0
   background-color: transparent
-  font-size: 2rem
+  font-size: 1.2rem
   color: #FFF
-
 
 .btn
   display: block
@@ -56,7 +50,7 @@ a
   padding: 0.8rem 1.6em
   border: 1px solid #FFF
   background-color: transparent
-  font-size: 1.5rem
+  font-size: 1.2rem
   color: #FFF
 
 
@@ -73,26 +67,43 @@ a
 
 
 [role="banner"]
+  padding: 24px 24px 12px 24px
   color: #FFF
 
+[role="navigation"]
+  padding: 24px
 
 [role="contentinfo"]
-  position: absolute
-  left: 24px
-  bottom: 24px
-  z-index: 1
-  color: #FFF
-
+  padding: 24px;
+  background-color: rgba(229, 102, 70, 0.8)
+@media(min-width: 864px)
+  [role="contentinfo"]
+    position: absolute
+    left: 0
+    bottom: 0
+    z-index: 1
+    color: #FFF
+    background-color: transparent
 
 .result
-  position: absolute
-  right: 0
-  top: 0
-  bottom: 0
-  left: 50%
-  z-index: 1
+  box-sizing: border-box
+  min-height: 100vh
   padding: 24px
-  background-color: #393939
   box-shadow: inset 4px 0 4px rgba(0,0,0,.3) 
+  background-color: #393939
   color: #FFF
   font-size: 18px
+  li
+    list-style: none
+    margin: 0.3rem 0
+@media(min-width: 864px)
+  .result
+    min-height: 0
+    overflow-x: none;
+    overflow-y: auto;
+    position: absolute
+    right: 0
+    top: 0
+    bottom: 0
+    left: 40%
+    z-index: 1
