--- a/views/index.jade
+++ b/views/index.jade
@@ -11,17 +11,63 @@ html
       header(role="banner")
         h1.appname CSSR
         p.tagline
-          Find unused and duplicate CSS    
-      nav
+          Go home and be a family man! 
+      nav(role="navigation")
         input(type="text", value='http://1000ch.net').input
         button.btn Parse
 
+    main.result
+      ul
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+        li
+          code .selector
+
     footer(role="contentinfo")
       p.
-        Powered by <a href="https://github.com/operasoftware/ucss">UCSS</a>. CSSR is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, <a href="https://twitter.com/hiloki">hiloki</a>.
-
-    main.result.
-      here
+        CSSR is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, 
+        <a href="https://twitter.com/hiloki">hiloki</a>.<br>
+        and powered by <a href="https://github.com/operasoftware/ucss">UCSS</a>.
 
     script(src='/js/lib.min.js')
     script(src='/js/app.min.js')
