add base components

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,12 @@
 doctype html
 html
   head
-    title 100000ch
+    title CSSR
     meta(charset='utf-8')
     link(rel='stylesheet', href='/css/lib.min.css')
     link(rel='stylesheet', href='/css/app.min.css')
+    link(rel='import', href='/webcomponents/result-list.html')
+    link(rel='import', href='/webcomponents/result-list-item.html')
   body
 
     .control
