--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -94,9 +94,7 @@ code
   background-color: #393939
   color: #FFF
   font-size: 18px
-  li
-    list-style: none
-    margin: 0.3rem 0
+  
 @media(min-width: 864px)
   .result
     min-height: 0
@@ -108,3 +106,6 @@ code
     bottom: 0
     left: 40%
     z-index: 1
+
+.is-hidden
+  display: none
