--- a/views/index.jade
+++ b/views/index.jade
@@ -12,62 +12,16 @@ html
     .control
       header(role="banner")
         h1.appname CSSR
-        p.tagline
+        p.tagline.
           Go home and be a family man! 
       nav(role="navigation")
         input(type="text", value='http://1000ch.net').input
         button.btn Parse
 
     main.result
+      img.is-hidden(src='/img/zangief.gif')
       result-list#js-result-list
         result-list-item
-      ul
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-        li
-          code .selector
-    template#js-result-item-template
-      result-list-item
 
     footer(role="contentinfo")
       p.
