he is loading character

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ html
         button.btn Parse
 
     main.result
-      img.is-hidden(src='/img/zangief.gif')
+      img#js-loading.is-hidden(src='/img/zangief.gif')
       result-list#js-result-list
         result-list-item
 
