--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ html
 
     main.result
       p.comment.line // Find unused and duplicate selectors
-      img#js-loading.loading.is-hidden(src='/img/zangief.gif')
+      img#js-loading.loading.is-hidden(src='/img/zangief-loading.gif')
       result-list#js-result-list
 
     footer(role="contentinfo")
