Add simple theme

--- a/public/css/index.styl
+++ b/public/css/index.styl
@@ -3,6 +3,7 @@ html
   background: url(/img/ussr.png) no-repeat center
   -webkit-background-size: cover
   background-size: cover
+  font-family: 'Noto Sans', sans-serif
 
 a
   color: #FFF
@@ -27,17 +28,18 @@ code
 
 .appname
   margin: 0
-
+  font-size: 4.8rem
+  font-family: 'Montserrat Subrayada', sans-serif 
 
 .tagline
   margin: 0
-
+  font-size: 1.2rem
 
 .input
   box-sizing: border-box
   -webkit-appearance: none
   border: 0
-  border-bottom: 1px solid #FFF
+  border-bottom: 2px solid #FFF
   width: 100%
   padding: 0.5rem 0
   background-color: transparent
@@ -52,7 +54,7 @@ code
   display: block
   margin-top: 2rem
   padding: 0.8rem 1.6em
-  border: 1px solid #FFF
+  border: 2px solid #FFF
   background-color: transparent
   font-size: 1.2rem
   color: #FFF
