--- a/views/index.jade
+++ b/views/index.jade
@@ -8,13 +8,13 @@ html
       header(role="banner")
         h1.appname CSSR
         p.tagline.
-          Go home and be a family man! 
+          Find unused and duplicate selectors
       nav(role="navigation")
         input(type="text", value='http://1000ch.net/').input
         button.btn Parse
 
     main.result
-      p.comment.line // Find unused and duplicate selectors
+      p.comment.line // Unused and duplicate selectors
       img#js-loading.loading.is-hidden(src='/img/zangief.gif')
       result-list#js-result-list
 
