he is installed with bower

--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -4,4 +4,4 @@ link(rel='stylesheet', href='/css/lib.min.css')
 link(rel='stylesheet', href='/css/app.min.css')
 link(rel='import', href='/webcomponents/result-list.html')
 link(rel='import', href='/webcomponents/result-list-item.html')
-script(src='/webcomponents/random-zangief.js')
+link(rel='import', href='/webcomponents/x-zangief/x-zangief.html')
