--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ html
 
     main.result
       p.comment.line // Find unused and duplicate selectors
-      img#js-loading.loading.is-hidden(is='random-zangief')
+      img#js-loading.loading.is-hidden(is='x-zangief')
       result-list#js-result-list
 
     footer(role="contentinfo")
