Add another loading

--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -6,4 +6,5 @@ link(rel='stylesheet', href='/css/app.min.css')
 link(rel='stylesheet', href='/css/theme.min.css')
 link(rel='import', href='/webcomponents/result-list.html')
 link(rel='import', href='/webcomponents/result-list-item.html')
+link(rel='import', href='/webcomponents/css-loading.html')
 script(src='/webcomponents/random-zangief.js')
