--- a/views/index.jade
+++ b/views/index.jade
@@ -15,8 +15,7 @@ html
 
     main.result
       p.comment.line // Unused and duplicate selectors
-      // img#js-loading.loading.is-hidden(is='random-zangief')
-      css-loading#js-loading.loading.loading--css.is-hidden
+      css-loading.js-loading.loading.loading--css.is-hidden
       result-list#js-result-list
 
     footer(role="contentinfo")
