add social buttons

--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -8,3 +8,5 @@ link(rel='import', href='/webcomponents/result-list.html')
 link(rel='import', href='/webcomponents/result-list-item.html')
 link(rel='import', href='/webcomponents/css-loading.html')
 link(rel='import', href='/webcomponents/x-zangief/x-zangief.html')
+link(rel='import', href='/webcomponents/twitter-button/dist/twitter-button.html')
+link(rel='import', href='/webcomponents/facebook-button/dist/facebook-button.html')
