--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,8 @@ html
       nav(role="navigation")
         input(type="text", value='http://1000ch.net/').input
         button.btn Parse
+      twitter-button(text='CSSR', type='share', href='http://cssr.herokuapp.com')
+      facebook-button(action='like', href='http://cssr.herokuapp.com')
 
     main.result
       p.comment.line // Unused and duplicate selectors
