Change error color

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html
       facebook-button(action='like', href='http://cssr.herokuapp.com')
 
     main.result
-      p.comment.line // Unused and duplicate selectors
+      p.comment.line // <b class="unused">Unused</b> and <b class="duplicate">Duplicate</b> selectors
       css-loading.js-loading.loading.loading--css.is-hidden
       result-list#js-result-list
 
