--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -133,6 +133,14 @@ code
 .comment
   color: #AAA
 
+.unused
+  color: indianred
+  font-weight: bold
+
+.duplicate
+  color: goldenrod
+  font-weight: bold
+
 .result
   overflow: auto
   padding-right: 24px
