--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
         p.tagline.
           Find unused and duplicate selectors
       nav(role="navigation")
-        input(type="text", value='http://1000ch.net/').input
+        input.input(type="text", value='http://1000ch.net/')
         button.btn Parse
       twitter-button(text='CSSR', type='share', href='http://cssr.herokuapp.com')
       facebook-button(action='like', href='http://cssr.herokuapp.com')
