layout social buttons

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -79,6 +79,9 @@ code
 [role="navigation"]
   padding: 24px
 
+[role="share"]
+  padding: 24px
+
 [role="contentinfo"]
   padding: 24px;
   background-color: rgba(229, 102, 70, 0.8)
