Modify social buttons layout

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -79,8 +79,11 @@ code
 [role="navigation"]
   padding: 24px
 
-[role="share"]
-  padding: 24px
+.share
+  > * 
+    display: inline-block
+    margin-right: 6px
+    vertical-align: top
 
 [role="contentinfo"]
   padding: 24px;
