--- a/views/index.jade
+++ b/views/index.jade
@@ -12,10 +12,6 @@ html
       nav(role="navigation")
         input.input(type="text", value='http://1000ch.net/')
         button.btn Parse
-      div(role='share')
-        twitter-button(width='80', text='CSSR', type='share', href='http://cssr.herokuapp.com')
-        facebook-button(width='80', action='like', href='http://cssr.herokuapp.com')
-        gplus-one(width='80', href='http://cssr.herokuapp.com')
 
     main.result
       p.comment.line // <b class="unused">Unused</b> and <b class="duplicate">Duplicate</b> selectors
@@ -23,6 +19,10 @@ html
       result-list#js-result-list
 
     footer(role="contentinfo")
+      div.share
+        twitter-button(width='80', text='CSSR', type='share', href='http://cssr.herokuapp.com')
+        facebook-button(width='80', action='like', href='http://cssr.herokuapp.com')
+        gplus-one(width='80', href='http://cssr.herokuapp.com')
       p.
         CSSR is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, 
         <a href="https://twitter.com/hiloki">hiloki</a>.<br>
