--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
         p.tagline.
           Find unused and duplicate selectors
       nav(role="navigation")
-        input.input(type="text", value='http://1000ch.net/')
+        input.input(type="text", value='http://google.com/')
         button.btn Parse
 
     main.result
