add link to respository

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ html
         facebook-button(width='80', action='like', href='http://cssr.herokuapp.com')
         gplus-one(width='80', href='http://cssr.herokuapp.com')
       p.
-        CSSR is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, 
+        <a href="https://github.com/1000ch/cssr">CSSR</a> is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, 
         <a href="https://twitter.com/hiloki">hiloki</a>.<br>
         and powered by <a href="https://github.com/operasoftware/ucss">UCSS</a>.
 
