Redesign css list

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -79,6 +79,19 @@ code
 [role="navigation"]
   padding: 24px
 
+.link-list
+  padding: 12px 24px
+  > li 
+    border-bottom: 1px dotted #FFF
+    list-style: none
+    > a 
+      display: block
+      padding: 6px 0;
+      color: #111
+      text-decoration: none
+      &:hover
+        color: #FFF
+
 .share
   > * 
     display: inline-block
