--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,7 @@ html
       nav(role="navigation")
         input#js-target.input(type="text", value='http://1000ch.net')
         button#js-parse.btn Parse
+      ul.link-list#js-css-list
 
     main.result
       p.comment.line // <b class="unused">Unused</b> and <b class="duplicate">Duplicate</b> selectors
