Fix x-zangief bug

--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -5,3 +5,4 @@ link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Noto+Sans:40
 link(rel='stylesheet', href='/css/app.min.css')
 link(rel='stylesheet', href='/css/theme.min.css')
 link(rel='import', href='/webcomponents/vulcanized.min.html')
+link(rel='import', href='/webcomponents/x-zangief/x-zangief.html')
