load webcomponents for each

--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -1,8 +1,13 @@
 title CSSR
 meta(charset='utf-8')
-link(rel='stylesheet', href='/css/lib.min.css')
-link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700|Montserrat+Subrayada:400,700')
-link(rel='stylesheet', href='/css/app.min.css')
-link(rel='stylesheet', href='/css/theme.min.css')
-link(rel='import', href='/webcomponents/vulcanized.min.html')
-link(rel='import', href='/webcomponents/x-zangief/x-zangief.html')
+link(rel="stylesheet", href="/css/lib.min.css")
+link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700|Montserrat+Subrayada:400,700")
+link(rel="stylesheet", href="/css/app.min.css")
+link(rel="stylesheet", href="/css/theme.min.css")
+link(rel="import", href="/webcomponents/result-list.html")
+link(rel="import", href="/webcomponents/result-list-item.html")
+link(rel="import", href="/webcomponents/css-loading.html")
+link(rel="import", href="/webcomponents/gplus-elements/dist/gplus-one.html")
+link(rel="import", href="/webcomponents/twitter-button/dist/twitter-button.html")
+link(rel="import", href="/webcomponents/facebook-button/dist/facebook-button.html")
+link(rel="import", href="/webcomponents/x-zangief/x-zangief.html")
