--- a/views/include/meta.jade
+++ b/views/include/meta.jade
@@ -1,6 +1,6 @@
 title CSSR
 meta(charset='utf-8')
-link(rel="stylesheet", href="/css/lib.min.css")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css")
 link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700|Montserrat+Subrayada:400,700")
 link(rel="stylesheet", href="/css/app.min.css")
 link(rel="stylesheet", href="/css/theme.min.css")
