--- a/views/include/script.jade
+++ b/views/include/script.jade
@@ -1,6 +1,6 @@
 script(src="https://code.jquery.com/jquery-3.2.1.min.js", integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=", crossorigin="anonymous")
 script(src="https://cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js")
-script(src='/js/app.min.js')
+script(src='/js/app.js')
 script(type='module').
   import CSSLoading from '/webcomponents/css-loading.js';
   import ResultList from '/webcomponents/result-list.js';
