--- a/views/include/script.jade
+++ b/views/include/script.jade
@@ -5,7 +5,7 @@ script(type='module').
   import CSSLoading from '/webcomponents/css-loading.js';
   import ResultList from '/webcomponents/result-list.js';
   import ResultItem from '/webcomponents/result-item.js';
-  import XZangief from './webcomponents/x-zangief/x-zangief.js';
+  import XZangief from '/webcomponents/x-zangief/x-zangief.js';
 
   customElements.define('css-loading', CSSLoading);
   customElements.define('result-list', ResultList);
