--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
         p.tagline.
           Find unused and duplicate selectors
       nav(role="navigation")
-        input#js-target.input(type="text", value='http://1000ch.net')
+        input#js-target.input(type="text", value='https://1000ch.net')
         button#js-parse.btn Parse
       ul.link-list#js-css-list
 
@@ -25,7 +25,7 @@ html
         facebook-button(width='80', action='like', href='http://cssr.herokuapp.com')
         gplus-one(width='80', href='http://cssr.herokuapp.com')
       p.
-        <a href="https://github.com/1000ch/cssr">CSSR</a> is crafted by <a href="https://twitter.com/1000ch">1000ch</a>, 
+        <a href="https://github.com/1000ch/cssr">CSSR</a> is crafted by <a href="https://twitter.com/1000ch">1000ch</a>,
         <a href="https://twitter.com/hiloki">hiloki</a>.<br>
         and powered by <a href="https://github.com/operasoftware/ucss">UCSS</a>.
 
