--- a/views/index.jade
+++ b/views/index.jade
@@ -21,9 +21,9 @@ html
 
     footer(role="contentinfo")
       div.share
-        twitter-button(width='80', text='CSSR', type='share', href='http://cssr.herokuapp.com')
-        facebook-button(width='80', action='like', href='http://cssr.herokuapp.com')
-        gplus-one(width='80', href='http://cssr.herokuapp.com')
+        twitter-button(width='80', text='CSSR', type='share', href='https://cssr.herokuapp.com')
+        facebook-button(width='80', action='like', href='https://cssr.herokuapp.com')
+        gplus-one(width='80', href='https://cssr.herokuapp.com')
       p.
         <a href="https://github.com/1000ch/cssr">CSSR</a> is crafted by <a href="https://twitter.com/1000ch">1000ch</a>,
         <a href="https://twitter.com/hiloki">hiloki</a>.<br>
