--- a/views/include/script.jade
+++ b/views/include/script.jade
@@ -1,16 +1,6 @@
 script(src="https://code.jquery.com/jquery-3.2.1.min.js", integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=", crossorigin="anonymous")
 script(src="https://cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js")
-script(src='/js/app.js')
-script(type='module').
-  import CSSLoading from '/webcomponents/css-loading.js';
-  import ResultList from '/webcomponents/result-list.js';
-  import ResultItem from '/webcomponents/result-item.js';
-  import XZangief from '/webcomponents/x-zangief/x-zangief.js';
-
-  customElements.define('css-loading', CSSLoading);
-  customElements.define('result-list', ResultList);
-  customElements.define('result-item', ResultItem);
-  customElements.define('z-zangief', XZangief);
+script(type="module", src="/js/app.js")
 script.
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
